[gd_scene load_steps=34 format=2]

[ext_resource path="res://characters/fuksi/fuksi_torso.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://characters/fuksi/fuksi_head.png" type="Texture" id=3]
[ext_resource path="res://characters/fuksi/fuksi_right_leg.png" type="Texture" id=4]
[ext_resource path="res://characters/fuksi/fuksi_left_leg.png" type="Texture" id=5]
[ext_resource path="res://characters/fuksi/fuksi_right_arm.png" type="Texture" id=6]
[ext_resource path="res://characters/fuksi/fuksi_left_hand.png" type="Texture" id=7]
[ext_resource path="res://characters/fuksi/fuksi_right_hand.png" type="Texture" id=8]
[ext_resource path="res://characters/fuksi/fuksi_left_arm.png" type="Texture" id=9]
[ext_resource path="res://animations/walk.tres" type="Animation" id=10]
[ext_resource path="res://animations/idle.tres" type="Animation" id=11]
[ext_resource path="res://animations/die.tres" type="Animation" id=12]
[ext_resource path="res://animations/attack_1.tres" type="Animation" id=13]
[ext_resource path="res://animations/attack_2.tres" type="Animation" id=14]
[ext_resource path="res://animations/hit.tres" type="Animation" id=15]
[ext_resource path="res://animations/fall.tres" type="Animation" id=16]
[ext_resource path="res://animations/attack_3.tres" type="Animation" id=17]
[ext_resource path="res://assets/Health.tscn" type="PackedScene" id=18]
[ext_resource path="res://scripts/PlayerStateMachine.gd" type="Script" id=19]
[ext_resource path="res://scripts/StateText.gd" type="Script" id=20]
[ext_resource path="res://scripts/states/Walk.gd" type="Script" id=21]
[ext_resource path="res://scripts/states/Idle.gd" type="Script" id=22]
[ext_resource path="res://scripts/states/Jump.gd" type="Script" id=23]
[ext_resource path="res://scripts/states/Die.gd" type="Script" id=24]
[ext_resource path="res://scripts/states/Attack.gd" type="Script" id=25]
[ext_resource path="res://scripts/states/Recover.gd" type="Script" id=26]
[ext_resource path="res://scripts/states/Kick.gd" type="Script" id=27]
[ext_resource path="res://scripts/states/Lunge.gd" type="Script" id=28]
[ext_resource path="res://scripts/states/Fall.gd" type="Script" id=29]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 106.499, 14.3674 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 38.7852, 38.411 )

[sub_resource type="Animation" id=3]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Flipper/torso:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 0, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -3.57381 ), Vector2( 0.21022, 2.5227 ), Vector2( 0, -5.65372 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Flipper/torso:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( -0.1, 0, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Flipper/hand_left:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( -0.1, 0, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 35.7476, -12.1916 ), Vector2( 29.6511, 5.6774 ), Vector2( 28.5992, -34.4875 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Flipper/hand_left:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( -0.1, 0, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -60.7, 0.0, -164.8 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Flipper/arm_left:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( -0.1, 0, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 20.7171, -13.2401 ), Vector2( 17.8501, -3.56978 ), Vector2( 16.0936, -23.9342 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Flipper/arm_left:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( -0.1, 0, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -50.0, -20.0, -84.7 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Flipper/leg_left:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( -0.1, 0, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 14.7457, 15.4314 ), Vector2( 16.6377, 20.687 ), Vector2( 15.9202, 7.54627 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Flipper/leg_left:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( -0.1, 0, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 42.0, -10.0, 42.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Flipper/head:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( -0.1, 0, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -4.28291, -34.9438 ), Vector2( -4.28291, -28.4269 ), Vector2( -3.96794, -38.4292 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Flipper/head:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( -0.1, 0, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Flipper/arm_right:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( -0.1, 0, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -24.4429, -8.65378 ), Vector2( -20.3699, -1.2604 ), Vector2( -19.7, -22.0444 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Flipper/arm_right:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( -0.1, 0, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 34.7, 0.0, 86.7 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Flipper/leg_right:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( -0.1, 0, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -4.76837e-07, 14.088 ), Vector2( -3.40495, 19.1334 ), Vector2( 3.00456, 12.0501 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Flipper/leg_right:rotation_degrees")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( -0.1, 0, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -24.7, 10.0, -33.4 ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Flipper/hand_right:position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( -0.1, 0, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -37.1803, -3.16498 ), Vector2( -30.2429, 7.34622 ), Vector2( -28.9679, -30.1948 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Flipper/hand_right:rotation_degrees")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( -0.1, 0, 0.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 17.3, 0.0, 156.1 ]
}

[sub_resource type="Animation" id=4]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Flipper/hand_left:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 41.26, -3.04865 ), Vector2( 35.0237, 4.96944 ), Vector2( 42.1509, 16.5511 ), Vector2( 38.3646, 25.6828 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Flipper/hand_left:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -95.4, -95.4, -95.4, -95.4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Flipper/arm_left:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 25.0398, -2.01071 ), Vector2( 18.5808, 5.56193 ), Vector2( 26.5988, 17.1436 ), Vector2( 23.7034, 24.2708 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Flipper/arm_left:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -52.0, -52.0, -52.0, -43.3 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Flipper/leg_left:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -2.36886, 19.6609 ), Vector2( -17.0687, 18.1019 ), Vector2( -21.0777, 16.9882 ), Vector2( -25.3095, 25.0063 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Flipper/leg_left:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 121.4, 156.1, 121.4 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Flipper/torso:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 2.22725, 7.12719 ), Vector2( 2.89542, 13.3635 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Flipper/torso:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 34.7, 86.7, 100.0, 100.0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Flipper/head:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 13.5601, -29.5882 ), Vector2( 19.3509, -21.1247 ), Vector2( 20.91, -7.53847 ), Vector2( 17.3464, -2.19308 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Flipper/head:rotation_degrees")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0, 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Flipper/arm_right:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 14.0899, -5.29444 ), Vector2( 17.8762, 0.0509491 ), Vector2( 20.3262, 14.9735 ), Vector2( 18.9898, 24.7734 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Flipper/arm_right:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -147.5, -147.5, -112.8 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Flipper/leg_right:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -19.8514, 9.87896 ), Vector2( -19.1832, 0.74725 ), Vector2( -16.065, 2.52905 ), Vector2( -15.1742, 10.1017 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Flipper/leg_right:rotation_degrees")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 52.0, 78.0, 95.3, 95.3 ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Flipper/hand_right:position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 27.1928, -9.75586 ), Vector2( 30.5337, -5.30137 ), Vector2( 33.4291, 8.95301 ), Vector2( 31.2018, 26.1028 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Flipper/hand_right:rotation_degrees")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ -156.1, -156.1, -156.1, -156.1 ]
}

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
script = ExtResource( 2 )

[node name="Flipper" type="Node2D" parent="."]

[node name="hand_left" type="Sprite" parent="Flipper"]
position = Vector2( 27.4511, -7.72587 )
rotation = -0.924408
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 7 )

[node name="arm_left" type="Sprite" parent="Flipper"]
position = Vector2( 13.0127, -9.58335 )
rotation = -0.755728
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 9 )

[node name="leg_left" type="Sprite" parent="Flipper"]
position = Vector2( 18.1218, 10.0838 )
rotation = 0.698132
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )

[node name="torso" type="Sprite" parent="Flipper"]
position = Vector2( -1.11363, -6.01356 )
rotation = -0.261799
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="head" type="Sprite" parent="Flipper"]
position = Vector2( -11.1624, -37.6063 )
rotation = 0.0872665
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="arm_right" type="Sprite" parent="Flipper"]
position = Vector2( -28.6732, -10.1944 )
rotation = -3.17824
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 6 )

[node name="leg_right" type="Sprite" parent="Flipper"]
position = Vector2( -1.36521, 12.9971 )
rotation = -0.261799
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )

[node name="hand_right" type="Sprite" parent="Flipper"]
position = Vector2( -14.4567, -22.6739 )
rotation = -2.42252
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 8 )

[node name="Hit" type="Area2D" parent="Flipper"]
scale = Vector2( 0.2, 0.2 )

[node name="damageBox" type="CollisionShape2D" parent="Flipper/Hit"]
position = Vector2( 250.494, -16.3516 )
scale = Vector2( 1, 5 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -5.2738 )
scale = Vector2( 0.567577, 0.909797 )
shape = SubResource( 2 )

[node name="Health" parent="." instance=ExtResource( 18 )]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 19 )
start_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 22 )

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 21 )

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource( 23 )

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource( 25 )

[node name="Kick" type="Node" parent="StateMachine"]
script = ExtResource( 27 )

[node name="Lunge" type="Node" parent="StateMachine"]
script = ExtResource( 28 )

[node name="Recover" type="Node" parent="StateMachine"]
script = ExtResource( 26 )

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource( 24 )

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource( 29 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
method_call_mode = 1
anims/attack_1 = ExtResource( 13 )
anims/attack_2 = ExtResource( 14 )
anims/attack_3 = ExtResource( 17 )
anims/die = ExtResource( 12 )
anims/fall = ExtResource( 16 )
anims/hit = ExtResource( 15 )
anims/idle = ExtResource( 11 )
anims/jump = SubResource( 3 )
anims/lunge = SubResource( 4 )
anims/walk = ExtResource( 10 )

[node name="Label" type="Label" parent="."]
margin_left = -57.9995
margin_top = -90.8175
margin_right = 64.0005
margin_bottom = -65.8175
text = "Tässä on tekstiä"
align = 1
script = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="enter_dead" from="." to="StateMachine" method="_on_player_death"]
[connection signal="fall" from="." to="StateMachine" method="_on_player_fall"]
[connection signal="hit" from="." to="StateMachine" method="_on_Player_hit"]
[connection signal="hit_success" from="." to="StateMachine/Attack" method="_on_succesful_hit"]
[connection signal="landed" from="." to="StateMachine/Jump" method="_reset_jump"]
[connection signal="landed" from="." to="StateMachine/Attack" method="_reset_attack"]
[connection signal="body_entered" from="Flipper/Hit" to="." method="_on_Hit_body_entered"]
[connection signal="body_exited" from="Flipper/Hit" to="." method="_on_Hit_body_exited"]
[connection signal="state_change" from="StateMachine" to="Label" method="_on_StateMachine_state_change"]
[connection signal="disable_state_machine" from="StateMachine/Die" to="StateMachine" method="set_active"]
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine" method="_on_animation_finished"]
